--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -4,12 +4,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  call-reusable-workflow:
-    uses: ./.github/workflows/reusable-workflow.yml
-    with:
-      node: 14   
+ call-reusable-workflow:
+  strategy:
+    matrix:
+      nodeversion: [14, 16, 18, 20]
+  uses: ./.github/workflows/reusable-workflow.yml
+  with:
+    node: ${{ matrix.nodeversion }}    
       
-  build:
+ build:
     runs-on: ubuntu-latest
     
     steps:
